objects/box__Box_UI_Configuration__mdt/box__Box_UI_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Use this custom setting to overwrite provided standard Box UI elements.</description>
    <label>Box UI Configuration</label>
    <pluralLabel>Box UI Configurations</pluralLabel>
</CustomObject>