objects/box__Box_UI_Configuration__mdt/fields/box__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>box__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>