objects/box__Box_UI_Configuration__mdt/fields/box__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>box__Object_API_Name__c</fullName>
    <description>Provide object api name where the UI element configuration should be applied.</description>
    <inlineHelpText>Provide object api name where the UI element configuration should be applied.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>