objects/box__Box_UI_Configuration__mdt/fields/box__UI_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>box__UI_Component_Name__c</fullName>
    <label>UI Component Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remove Create Folder Button On Box Widget</fullName>
                <default>true</default>
                <label>Remove Create Folder Button On Box Widget</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>